--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,24 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-pool2</artifactId>
-		</dependency>
-		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>3.15.3</version>
+		  </dependency>
+		  <dependency>
+			  <groupId>com.google.protobuf</groupId>
+			  <artifactId>protobuf-java-util</artifactId>
+			  <version>3.15.3</version>
+		  </dependency>
+    	<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-transport-native-epoll</artifactId>
 			<classifier>linux-x86_64</classifier>
@@ -38,6 +50,10 @@
 			<artifactId>netty-transport-native-kqueue</artifactId>
 			<classifier>osx-x86_64</classifier>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
 		</dependency>
 		<dependency>
   			<groupId>org.apache.httpcomponents.client5</groupId>
@@ -87,6 +103,11 @@
 			<artifactId>activiti-engine</artifactId>
 			<version>7.0.0.SR1</version>
 		</dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-image-generator</artifactId>
+            <version>7.0.0.Beta2</version>
+        </dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
